[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=./notion_client --cov-report=term-missing --cov-report=xml --cov-report=html"
asyncio_mode = "auto"

[tool.mypy]
files = ["notion_client"]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[tool.pydocstyle]
ignore = [
	"D101",
	"D105",
	"D107",
	"D203",
	"D212",
	"D213",
	"D214",
	"D215",
	"D404",
	"D405",
	"D406",
	"D407",
	"D408",
	"D409",
	"D410",
	"D411",
	"D413",
	"D415",
	"D416",
	"D417"
]
ignore-decorators = "property"
# D101: Missing docstring in public class
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# rest of the ignored errors are pep257 defaults
